# iced-fluent-icons

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  index.html
src/: lib.rs
