[package]
name = "iced-fluent-icons"
version = "1.0.0"
edition = "2024"
authors = ["Febri <root.febri@gmail.com>"]
description = "Procedural macro crate that generates Fluent UI icon stubs and rewrites call sites with inline SVG loading"
license = "MIT OR Apache-2.0"
keywords = ["fluentui", "icons", "proc-macro", "svg", "iced-icons"]
categories = ["development-tools::procedural-macro-helpers"]
include = ["icons"]

[lib]
proc-macro = true

[features]
# Enable all features
default = []
no-filled = []
no-color = []
no-regular = []
no-light = []

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "2.0"
features = ["full", "visit-mut"]
