[package]
name = "iced-fluent-icons"
version = "0.14.0"
edition = "2024"
authors = ["Febri <root.febri@gmail.com>"]
description = "Procedural macro crate that generates Fluent UI icon stubs and rewrites call sites with inline SVG loading"
license = "MIT OR Apache-2.0"
keywords = ["fluentui", "icons", "proc-macro", "svg", "iced-icons"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/rootfebri/iced-fluent-icons"
homepage = "https://github.com/rootfebri/iced-fluent-icons"
include = [
  "src/**/*",
  "icons/**/*",
  "Cargo.toml",
  "build.rs",
  "LICENSE*",
  "README*",
]

[lib]
proc-macro = true

[features]
# All variants are included by default.
default = []

# Exclusion features — omit an entire icon variant family.
no-filled = []
no-color = []
no-regular = []
no-light = []

# Inclusion features — keep *only* the named variant family (or families).
# Multiple `only-*` features may be combined; e.g. `only-filled` + `only-regular`
# will include both Filled and Regular icons.
only-filled = []
only-color = []
only-regular = []
only-light = []

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "2.0"
features = ["full", "visit-mut"]
